--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
         android:id="@+id/btObterToken"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Obter Token" />
+        android:text="Log in" />
 
     <!--
     <Button
@@ -32,11 +32,12 @@
         android:layout_height="wrap_content"
         android:text="Criar Usuário" />-->
 
+    <!--
     <Button
         android:id="@+id/btVerTodosUsuarios"
         android:text="Ver Todos Usuarios"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content" /> -->
 
     <!--
     <Button
